--- a/04-condition-control-structure.html
+++ b/04-condition-control-structure.html
@@ -14,7 +14,7 @@
         }
 
         const what = hour < 12 ? "coffee" : "lunch"
-        console.log("Let's have ${what}")
+        console.log(`Let's have ${what}`)
 
             </script>
     </head>
