--- a/04-logical-switch-control-structure.html
+++ b/04-logical-switch-control-structure.html
@@ -1,27 +1,26 @@
 <html>
     <head>
         <script>
-
-            const hour = 10
+            const choice = 3
             let msg = ""
 
-            switch(hour) {
-                case 10:{
-                    msg = "It's 10 o'clock"
+            switch(true) {
+                case (choice < 1): {
+                    msg = "Make coffee!"
                     break
                 }
-                case 12: {
-                    msg = "It's noon!"
+                case (choice > 2): {
+                    msg = "Make tea!"
                     break
                 }
                 default: {
-                    msg = "My clock is off"
+                    msg = "Pour water!"
                     break
                 }
+            }
 
-            }    
-            
             console.log(`Message: ${msg}`)
+            
         </script>
     </head>
 </html>
